--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="/img/back.png" class="brand-logo" alt="">
     <ul class="nav-links">
         <li class="nav-items"><a href="#">TV</a></li>
-        <li class="nav-items"><a href="#">Peliculas</a></li>
+        <li class="nav-items"><a href="#">Peliculones</a></li>
         <li class="nav-items"><a href="#">Series</a></li>
         <li class="nav-items"><a href="#">premium</a></li>
 
